@startuml
title ERD - THS-THM System Manajemen

hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "users" as users {
  * id : uuid <<PK>>
  --
  name : varchar
  email : varchar <<unique>>
  password_hash : varchar
  role : enum
  scope_type : enum
  scope_id : uuid
  anggota_id : uuid <<nullable>>
  fcm_token : text
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "nasional" as nasional {
  * id : uuid <<PK>>
  --
  nama : varchar
  kode : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "distrik" as distrik {
  * id : uuid <<PK>>
  --
  nasional_id : uuid <<FK>>
  kode_distrik : varchar <<unique>>
  nama : varchar
  alamat : text
  created_at : timestamp
  updated_at : timestamp
}

entity "wilayah" as wilayah {
  * id : uuid <<PK>>
  --
  distrik_id : uuid <<FK>>
  kode_wilayah : varchar
  nama : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "ranting" as ranting {
  * id : uuid <<PK>>
  --
  wilayah_id : uuid <<FK>>
  kode_ranting : varchar
  nama : varchar
  lokasi_latihan : text
  created_at : timestamp
  updated_at : timestamp
}

entity "unit_latihan" as unit_latihan {
  * id : uuid <<PK>>
  --
  distrik_id : uuid <<FK>>
  nama : varchar
  tipe : enum('reguler','khusus')
  lokasi : text
  created_at : timestamp
  updated_at : timestamp
}

entity "anggota" as anggota {
  * id : uuid <<PK>>
  --
  ranting_id : uuid <<FK>>
  nomor_anggota : varchar <<unique>>
  nama_lengkap : varchar
  jenis_kelamin : enum('L','P')
  tempat_lahir : varchar <<nullable>>
  tanggal_lahir : date <<nullable>>
  alamat : text <<nullable>>
  no_hp : varchar <<nullable>>
  email : varchar <<nullable>>
  foto_path : varchar <<nullable>>
  status_keanggotaan : enum('aktif','nonaktif','pindah','keluar','meninggal')
  tingkat : varchar
  status_data : enum('complete','incomplete')
  status_validasi : enum('pending','approved','rejected')
  missing_fields : jsonb
  created_at : timestamp
  updated_at : timestamp
}

entity "anggota_role" as anggota_role {
  * id : uuid <<PK>>
  --
  anggota_id : uuid <<FK>>
  role_code : enum('anggota','pelatih','penguji','wasit_juri')
  issued_at : timestamp
  expires_at : timestamp <<nullable>>
  created_at : timestamp
}

entity "calon_anggota" as calon_anggota {
  * id : uuid <<PK>>
  --
  ranting_id : uuid <<FK>>
  nama_lengkap : varchar
  jenis_kelamin : enum('L','P')
  tempat_lahir : varchar <<nullable>>
  tanggal_lahir : date <<nullable>>
  alamat : text <<nullable>>
  no_hp : varchar <<nullable>>
  email : varchar <<nullable>>
  status : enum('diusulkan','mengikuti_pendadaran','lulus','gagal','dibatalkan')
  usul_oleh_user_id : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "claim_anggota" as claim_anggota {
  * id : uuid <<PK>>
  --
  anggota_id : uuid <<FK nullable>>
  nama_lengkap : varchar
  nomor_anggota_input : varchar
  nomor_unik_kartu : varchar <<nullable>>
  nomor_unik_sertifikat : varchar <<nullable>>
  bukti_file_path : varchar <<nullable>>
  status : enum('pending','approved','rejected')
  catatan_admin : text <<nullable>>
  reviewed_by : uuid <<FK nullable>>
  reviewed_at : timestamp <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "pendaftaran_anggota" as pendaftaran_anggota {
  * id : uuid <<PK>>
  --
  ranting_id : uuid <<FK nullable>>
  nama_lengkap : varchar
  jenis_kelamin : enum('L','P')
  tempat_lahir : varchar <<nullable>>
  tanggal_lahir : date <<nullable>>
  no_hp : varchar
  email : varchar <<nullable>>
  alamat : text <<nullable>>
  status : enum('pending','approved','rejected')
  catatan_admin : text <<nullable>>
  reviewed_by : uuid <<FK nullable>>
  reviewed_at : timestamp <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "anggota_update_request" as anggota_update_request {
  * id : uuid <<PK>>
  --
  anggota_id : uuid <<FK>>
  submitted_by : uuid <<FK>>
  old_data : jsonb
  new_data : jsonb
  status : enum('pending','approved','rejected')
  catatan_admin : text <<nullable>>
  reviewed_by : uuid <<FK nullable>>
  reviewed_at : timestamp <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "kegiatan" as kegiatan {
  * id : uuid <<PK>>
  --
  scope_type : enum('nasional','distrik','wilayah','ranting','unit_latihan')
  scope_id : uuid
  nama : varchar
  tipe : enum('latihan','pendadaran','ujian_tingkat','rapat','retret','pelantikan','lainnya')
  lokasi : text
  tanggal_mulai : timestamp
  tanggal_selesai : timestamp
  created_by : uuid <<FK>>
  status : enum('draft','published','closed','cancelled')
  created_at : timestamp
  updated_at : timestamp
}

entity "absensi_kegiatan" as absensi_kegiatan {
  * id : uuid <<PK>>
  --
  kegiatan_id : uuid <<FK>>
  anggota_id : uuid <<FK nullable>>
  calon_anggota_id : uuid <<FK nullable>>
  checkin_method : enum('manual','qr')
  checkin_time : timestamp
  recorded_by : uuid <<FK>>
  created_at : timestamp
}

entity "latihan" as latihan {
  * id : uuid <<PK>>
  --
  ranting_id : uuid <<FK>>
  kegiatan_id : uuid <<FK nullable>>
  pelatih_id : uuid <<FK>>
  hari_tanggal : timestamp
  lokasi : text
  jenis_materi : text
  hasil_latihan_global : text
  rekomendasi_latihan_berikutnya : text
  created_at : timestamp
  updated_at : timestamp
}

entity "absensi_latihan" as absensi_latihan {
  * id : uuid <<PK>>
  --
  latihan_id : uuid <<FK>>
  anggota_id : uuid <<FK nullable>>
  calon_anggota_id : uuid <<FK nullable>>
  checkin_method : enum('manual','qr')
  checkin_time : timestamp
  recorded_by : uuid <<FK>>
  created_at : timestamp
}

entity "catatan_latihan_peserta" as catatan_latihan_peserta {
  * id : uuid <<PK>>
  --
  latihan_id : uuid <<FK>>
  anggota_id : uuid <<FK nullable>>
  calon_anggota_id : uuid <<FK nullable>>
  catatan_khusus : text
  created_by : uuid <<FK>>
  created_at : timestamp
}

entity "dokumentasi_latihan" as dokumentasi_latihan {
  * id : uuid <<PK>>
  --
  latihan_id : uuid <<FK>>
  file_path : varchar
  file_type : enum('foto','video')
  urutan : int
  uploaded_by : uuid <<FK>>
  created_at : timestamp
}

entity "aspek_penilaian" as aspek_penilaian {
  * id : uuid <<PK>>
  --
  kode_aspek : varchar <<unique>>
  nama_aspek : varchar
  deskripsi : text
  bobot : decimal
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "item_penilaian" as item_penilaian {
  * id : uuid <<PK>>
  --
  aspek_id : uuid <<FK>>
  kode_item : varchar <<unique>>
  nama_item : varchar
  skor_maksimal : decimal
  bobot : decimal
  urutan : int
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "penguji_kegiatan" as penguji_kegiatan {
  * id : uuid <<PK>>
  --
  kegiatan_id : uuid <<FK>>
  penguji_user_id : uuid <<FK>>
  anggota_id : uuid <<FK nullable>>
  peran : enum('ketua','anggota')
  created_at : timestamp
}

entity "nilai_pendadaran" as nilai_pendadaran {
  * id : uuid <<PK>>
  --
  kegiatan_id : uuid <<FK>>
  calon_anggota_id : uuid <<FK>>
  item_penilaian_id : uuid <<FK>>
  penguji_user_id : uuid <<FK>>
  skor : decimal
  komentar : text <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "hasil_pendadaran" as hasil_pendadaran {
  * id : uuid <<PK>>
  --
  kegiatan_id : uuid <<FK>>
  calon_anggota_id : uuid <<FK>>
  total_skor : decimal
  ranking : int
  status_kelulusan : enum('lulus','gagal')
  status_validasi : enum('pending','approved','rejected')
  divalidasi_oleh : uuid <<FK nullable>>
  divalidasi_at : timestamp <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "jenis_iuran" as jenis_iuran {
  * id : uuid <<PK>>
  --
  nama : varchar
  deskripsi : text
  nominal : decimal
  periode : enum('bulanan','tahunan','kegiatan','sekali')
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "pembayaran_iuran" as pembayaran_iuran {
  * id : uuid <<PK>>
  --
  jenis_iuran_id : uuid <<FK>>
  anggota_id : uuid <<FK>>
  jumlah_bayar : decimal
  tanggal_bayar : date
  metode_bayar : enum('tunai','transfer','qris','ewallet')
  status : enum('pending','lunas','ditolak','dibatalkan')
  bukti_bayar_path : varchar <<nullable>>
  verified_by : uuid <<FK nullable>>
  verified_at : timestamp <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "document_types" as document_types {
  * id : uuid <<PK>>
  --
  code : varchar <<unique>>
  name : varchar
  category : enum('kartu','sertifikat','piagam','surat','dokumen_lain')
  is_auto_generated : boolean
  requires_approval : boolean
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "document_templates" as document_templates {
  * id : uuid <<PK>>
  --
  document_type_id : uuid <<FK>>
  name : varchar
  template_file_path : varchar
  layout_json : jsonb <<nullable>>
  background_file_path : varchar <<nullable>>
  is_active : boolean
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid <<nullable>>
  created_by : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "document_signers" as document_signers {
  * id : uuid <<PK>>
  --
  document_type_id : uuid <<FK nullable>>
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid <<nullable>>
  name : varchar
  position : varchar
  signature_file_path : varchar
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "document_stamps" as document_stamps {
  * id : uuid <<PK>>
  --
  document_type_id : uuid <<FK nullable>>
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid <<nullable>>
  name : varchar
  stamp_file_path : varchar
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "issued_documents" as issued_documents {
  * id : uuid <<PK>>
  --
  document_type_id : uuid <<FK>>
  anggota_id : uuid <<FK nullable>>
  calon_anggota_id : uuid <<FK nullable>>
  kegiatan_id : uuid <<FK nullable>>
  nomor_dokumen : varchar <<unique>>
  title : varchar
  status : enum('draft','issued','revoked')
  issued_at : timestamp <<nullable>>
  issued_by : uuid <<FK nullable>>
  template_id : uuid <<FK>>
  signer_id : uuid <<FK nullable>>
  stamp_id : uuid <<FK nullable>>
  file_path : varchar <<nullable>>
  qr_token : varchar <<unique>>
  metadata : jsonb
  created_at : timestamp
  updated_at : timestamp
}

entity "document_validation_logs" as document_validation_logs {
  * id : uuid <<PK>>
  --
  issued_document_id : uuid <<FK nullable>>
  qr_token : varchar
  validation_result : enum('valid','revoked','not_found')
  validated_by : uuid <<FK>>
  validated_at : timestamp
  notes : text <<nullable>>
}

entity "organisasi_dokumen" as organisasi_dokumen {
  * id : uuid <<PK>>
  --
  judul : varchar
  deskripsi : text
  kategori : enum('statuta','kurikulum','struktur_organisasi','pedoman','materi','lainnya')
  file_path : varchar
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid <<nullable>>
  akses_roles : jsonb
  akses_tingkatan : jsonb
  is_public : boolean
  uploaded_by : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "surat_masuk" as surat_masuk {
  * id : uuid <<PK>>
  --
  nomor_surat : varchar
  tanggal_surat : date
  tanggal_terima : date
  pengirim : varchar
  perihal : text
  file_path : varchar
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid <<nullable>>
  diterima_oleh : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "surat_keluar" as surat_keluar {
  * id : uuid <<PK>>
  --
  nomor_surat : varchar
  tanggal_surat : date
  penerima : varchar
  perihal : text
  file_path : varchar
  scope_type : enum('nasional','distrik','wilayah','ranting')
  scope_id : uuid <<nullable>>
  dibuat_oleh : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "import_jobs" as import_jobs {
  * id : uuid <<PK>>
  --
  import_type : enum('anggota','calon_anggota','aspek_penilaian','item_penilaian')
  file_name : varchar
  file_path : varchar
  status : enum('pending','processing','completed','failed')
  total_rows : int
  success_rows : int
  warning_rows : int
  error_rows : int
  imported_by : uuid <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "import_row_logs" as import_row_logs {
  * id : uuid <<PK>>
  --
  import_job_id : uuid <<FK>>
  row_number : int
  raw_data : jsonb
  status : enum('success','warning','error')
  messages : jsonb
  created_record_id : uuid <<nullable>>
  created_at : timestamp
}

entity "notifications" as notifications {
  * id : uuid <<PK>>
  --
  recipient_user_id : uuid <<FK>>
  title : varchar
  body : text
  type : varchar
  data : jsonb
  is_read : boolean
  sent_via_fcm : boolean
  created_at : timestamp
}

entity "audit_logs" as audit_logs {
  * id : uuid <<PK>>
  --
  actor_user_id : uuid <<FK>>
  action : varchar
  entity_name : varchar
  entity_id : uuid
  old_value : jsonb
  new_value : jsonb
  ip_address : varchar
  created_at : timestamp
}

nasional ||--o{ distrik
distrik ||--o{ wilayah
distrik ||--o{ unit_latihan
wilayah ||--o{ ranting
ranting ||--o{ anggota
ranting ||--o{ calon_anggota
ranting ||--o{ pendaftaran_anggota

anggota ||--o{ anggota_role
anggota ||--o{ anggota_update_request
users ||--o{ anggota_update_request
users ||--o{ claim_anggota
users ||--o{ pendaftaran_anggota

users ||--o{ kegiatan
kegiatan ||--o{ absensi_kegiatan
anggota ||--o{ absensi_kegiatan
calon_anggota ||--o{ absensi_kegiatan

ranting ||--o{ latihan
kegiatan ||--o{ latihan
latihan ||--o{ absensi_latihan
latihan ||--o{ catatan_latihan_peserta
latihan ||--o{ dokumentasi_latihan
anggota ||--o{ absensi_latihan
calon_anggota ||--o{ absensi_latihan

aspek_penilaian ||--o{ item_penilaian
kegiatan ||--o{ penguji_kegiatan
kegiatan ||--o{ nilai_pendadaran
kegiatan ||--o{ hasil_pendadaran
item_penilaian ||--o{ nilai_pendadaran
calon_anggota ||--o{ nilai_pendadaran
calon_anggota ||--o{ hasil_pendadaran

jenis_iuran ||--o{ pembayaran_iuran
anggota ||--o{ pembayaran_iuran

document_types ||--o{ document_templates
document_types ||--o{ document_signers
document_types ||--o{ document_stamps
document_types ||--o{ issued_documents
document_templates ||--o{ issued_documents
document_signers ||--o{ issued_documents
document_stamps ||--o{ issued_documents
issued_documents ||--o{ document_validation_logs
anggota ||--o{ issued_documents
calon_anggota ||--o{ issued_documents
kegiatan ||--o{ issued_documents

users ||--o{ organisasi_dokumen
users ||--o{ surat_masuk
users ||--o{ surat_keluar
users ||--o{ import_jobs
import_jobs ||--o{ import_row_logs
users ||--o{ notifications
users ||--o{ audit_logs

@enduml
